k8s/ingress/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: postgresql
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
